<resources>
    <string name="app_name" translatable="false">Bee Allrounder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnMainToDBMain">Database Menu</string>
    <string name="btnMainToCoMMMain">Communication Menu</string>
    <string name="btnDBMainToDBAddRecord">Add new record</string>
    <string name="fragmentMainLabel">Main menu</string>
    <string name="fragmentDBMainLabel">DB main menu</string>
    <string name="fragmentCommMainLabel">Communication main menu</string>
    <string name="btnDBAddRecordSend">Add</string>
    <string name="btnDBMainToDBList">Display records</string>
    <string name="radioDBAddYes">Yes</string>
    <string name="radioDBAddNo">No</string>
    <string name="radioGroupDBAddZachowanie">Behavior</string>
    <string name="radioGroupDBAddNerwowe">Nervous</string>
    <string name="radioGroupDBAddAgresywne">Aggressive</string>
    <string name="radioGroupDBAddSpokojne">Peaceful</string>
    <string name="radioGroupDBAddSila">Strength</string>
    <string name="radioGroupDBAddSlabe">Weak</string>
    <string name="radioGroupDBAddSrednia">Medium</string>
    <string name="radioGroupDBAddSilna">Strong</string>
    <string name="DBAddDateText">Date</string>
    <string name="DBAddMainNumberText">Hive number</string>
    <string name="DBAddileText">How many</string>
    <string name="DBAddileRamekText">Frames</string>
    <string name="DBAddileKorpusowText">\?Korpusow</string>
    <string name="DBAddileRamekZMiodemText">\?Ramek z miodem</string>
    <string name="DBAddileRamekZCzerwiemText">\?Ramek z czerwiem</string>
    <string name="DBAddileRamekZPierzgaText">\?Ramek z pierzga</string>
    <string name="DBAddileRamekZWezaText">\?Ramek z weza</string>
    <string name="DBAddNotatkiText">Notes</string>
    <string name="DBAddRadioGroupJajeczkaText">Eggs</string>
    <string name="DBAddRadioGroupCzerwOtwartyText">Czerw Otwarty</string>
    <string name="DBAddRadioGroupCzerwZasklepionyText">Czerw zaklepiony</string>
    <string name="DBAddRadioGroupCzerwTrutowyText">Czerw trutowy</string>
    <string name="DBAddRadioGroupNakropText">Nakrop</string>
    <string name="DBAddRadioGroupMiodZasklepionyText">Miód zasklepiony</string>
    <string name="DBAddRadioGroupPierzgaText">Pierzga</string>
    <string name="ToastSuccessfulyAddedSnapshot">Successfuly added record</string>
    <string name="btnCommMainLocalDownloadText">Download from local esp</string>
    <string name="btnCommLocalDownloadConnect">Connect to esp</string>
    <string name="btnCommLocalDownloadDownloadAll">Download all data</string>
    <string name="btnCommLocalDownloadDownloadNew">Download new data</string>
    <string name="ToastFailedReceiveMsg">Connection failed</string>
    <string name="ToastSuccessfulyReceivedMsgUnidentified">Connection successful, but message couldn\'t be identified</string>
    <string name="ToastSuccessfulyReceivedMsgIdentified">"Connection successful, message: "</string>
    <string name="btnDBUpdateRecordSend">Update</string>
    <string name="ToastSuccessfullyRemoved">"Sucessfully removed hive "</string>
    <string name="ToastRemoveMsg">Are you sure you want to delete hive</string>
    <string name="ToastDeleteHive">Delete hive</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="ToastDidntPassCheck">Didn\'t pass the check (date,number,notes)</string>
    <string name="Confirmation">Confirmation</string>
    <string name="Areyousure">Are you sure you want to add</string>
    <string name="SuccessfulyRemovedAll">Successfully removed all records</string>
    <string name="AreYouSureAll">Are you sure you want to delete all records?</string>
    <string name="DeleteAllRecords">Delete all records?</string>
    <string name="Starting">Starting</string>
    <string name="ToastSuccessfullyUpdated">Successfully updated record</string>
    <string name="AreYouSureUpdate">Are you sure you want to update</string>
    <string name="DBAddTitle">Database Add</string>
    <string name="DBListMenu">Database List</string>
    <string name="TitleCommLocal">Local Communication Menu</string>
    <string name="TitleDBUpdate">Database Update</string>
    <string name="btnCommLocalDownloadBle">BLE download</string>
</resources>