<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.beeallrounder.fragments.MainFragment"
        android:label="@string/fragmentMainLabel"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_DBMainFragment"
            app:destination="@id/DBMainFragment" />
        <action
            android:id="@+id/action_mainFragment_to_commMainFragment"
            app:destination="@id/commMainFragment" />
    </fragment>
    <fragment
        android:id="@+id/DBMainFragment"
        android:name="com.example.beeallrounder.fragments.DBOld.DBMainFragment"
        android:label="@string/fragmentDBMainLabel"
        tools:layout="@layout/fragment_d_b_main">
        <action
            android:id="@+id/action_DBMainFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
        <action
            android:id="@+id/action_DBMainFragment_to_DBListFragment"
            app:destination="@id/DBListFragment" />
        <action
            android:id="@+id/action_DBMainFragment_to_DBWykres"
            app:destination="@id/DBWykres" />
    </fragment>
    <fragment
        android:id="@+id/commMainFragment"
        android:name="com.example.beeallrounder.fragments.Comm.CommMainFragment"
        android:label="@string/fragmentCommMainLabel"
        tools:layout="@layout/fragment_comm_main">
        <action
            android:id="@+id/action_commMainFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
        <action
            android:id="@+id/action_commMainFragment_to_commLocalDownloadFragment"
            app:destination="@id/commLocalDownloadFragment" />
        <action
            android:id="@+id/action_commMainFragment_to_commLocalDownloadBle"
            app:destination="@id/commLocalDownloadBle" />
    </fragment>
    <fragment
        android:id="@+id/DBAddFragment"
        android:name="com.example.beeallrounder.fragments.DBOld.DBAddFragment"
        android:label="@string/DBAddTitle"
        tools:layout="@layout/fragment_d_b_add">
        <action
            android:id="@+id/action_DBAddFragment_to_DBListFragment"
            app:destination="@id/DBListFragment" />
    </fragment>
    <fragment
        android:id="@+id/DBListFragment"
        android:name="com.example.beeallrounder.fragments.DBOld.DBListFragment"
        android:label="@string/DBListMenu"
        tools:layout="@layout/fragment_d_b_list">
        <action
            android:id="@+id/action_DBListFragment_to_DBMainFragment"
            app:destination="@id/DBMainFragment" />
        <action
            android:id="@+id/action_DBListFragment_to_DBAddFragment"
            app:destination="@id/DBAddFragment" />
        <action
            android:id="@+id/action_DBListFragment_to_DBUpdateFragment"
            app:destination="@id/DBUpdateFragment" />
    </fragment>
    <fragment
        android:id="@+id/commLocalDownloadFragment"
        android:name="com.example.beeallrounder.fragments.Comm.CommLocalDownloadFragment"
        android:label="@string/TitleCommLocal"
        tools:layout="@layout/fragment_comm_local_download">
        <action
            android:id="@+id/action_commLocalDownloadFragment_to_commMainFragment"
            app:destination="@id/commMainFragment" />
    </fragment>
    <fragment
        android:id="@+id/DBUpdateFragment"
        android:name="com.example.beeallrounder.fragments.DBOld.DBUpdateFragment"
        android:label="@string/TitleDBUpdate"
        tools:layout="@layout/fragment_d_b_update">
        <action
            android:id="@+id/action_DBUpdateFragment_to_DBListFragment"
            app:destination="@id/DBListFragment" />
        <argument
            android:name="currentSnapshot"
            app:argType="com.example.beeallrounder.databases.oldDB.model.Beehive_snapshot" />
    </fragment>
    <fragment
        android:id="@+id/commLocalDownloadBle"
        android:name="com.example.beeallrounder.fragments.Comm.CommLocalDownloadBle"
        android:label="fragment_comm_local_download_ble"
        tools:layout="@layout/fragment_comm_local_download_ble" >
        <action
            android:id="@+id/action_commLocalDownloadBle_to_commMainFragment"
            app:destination="@id/commMainFragment" />
    </fragment>
    <fragment
        android:id="@+id/DBWykres"
        android:name="com.example.beeallrounder.fragments.DB.DBWykresFragment"
        android:label="fragment_d_b_wykres"
        tools:layout="@layout/fragment_d_b_wykres" >
        <action
            android:id="@+id/action_DBWykres_to_DBMainFragment"
            app:destination="@id/DBMainFragment" />
    </fragment>
</navigation>