<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Comm.CommLocalDownloadFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="9dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="401dp" />

    <Button
        android:id="@+id/btnCommLocalDownloadConnect"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="48dp"
        android:text="@string/btnCommLocalDownloadConnect"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCommLocalDownloadDownloadAll"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btnCommLocalDownloadDownloadAll"
        app:layout_constraintStart_toStartOf="@+id/btnCommLocalDownloadConnect"
        app:layout_constraintTop_toBottomOf="@+id/btnCommLocalDownloadConnect" />

    <Button
        android:id="@+id/btnCommLocalDownloadDownloadNew"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btnCommLocalDownloadDownloadNew"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/btnCommLocalDownloadDownloadAll"
        app:layout_constraintTop_toBottomOf="@+id/btnCommLocalDownloadDownloadAll" />

    <!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Button"-->
<!--        tools:layout_editor_absoluteX="156dp"-->
<!--        tools:layout_editor_absoluteY="75dp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>